Add cors support

--- a/Ffhome/Pipfile
+++ b/Ffhome/Pipfile
@@ -13,6 +13,7 @@ django-extensions = "*"
 ipdb = "*"
 pytest = "*"
 pytest-django = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.6"
